# AppleCVA

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: macos-app-prerelease.yml
apps/vts_source/: VTSSourceInfo.plist  app_delegate.h  app_delegate.m  calibration.h  calibration.m  client.h  client.m  main.m  parameters.h  parameters.m
apps/vts_source/qml/: Main.qml
apps/vts_source/qt/: controller.mm  main.cpp  preview_item.cpp  preview_item.h
cmake/: AppleCVADeployQt.cmake.in
common/: capture.h  capture.m  overlay_view.h  overlay_view.m  tracking_pipeline.h  tracking_pipeline.m  tracking_utils.h  tracking_utils.m
example/: README.md  camera_viewer.m  image_demo.m
include/: applecva.h
lib/: applecva.m
tools/: semantics_probe.m
